# dp32g030-rs

./: Cargo.toml  README.md  build.rs
src/: CMSIS-SVD.xsd  DP32G030.svd  lib.rs
