[package]
authors = ["Xpl0itR <xpl0itr@outlook.com>"]
build = "build.rs"
description = "Peripheral Access Crate for the DP32G030 microcontroller"
edition = "2018"
license = "MPL-2.0"
name = "dp32g030"
readme = "README.md"
repository = "https://github.com/Xpl0itR/dp32g030-rs"
version = "1.0.0"

[build-dependencies]
form = "0.12.1"
svd2rust = "0.33.4"

[dependencies]
critical-section = { version = "1.1.2", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
defmt = []